resources/css/styles.css
* {
    box-sizing: border-box;
    outline: none;
    margin: 0;
    padding: 0;
    list-style: none;
    text-decoration: none;
    scroll-behavior: smooth;
}

body {
    background-color: #1f2833;
    overflow-x: hidden;
}

.scroll-lock {
    overflow: hidden;
}

.nav-menu {
    position: fixed;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: aliceblue;
    width: 100%;
    height: 70px;
    z-index: 10;
}

.nav-menu ul {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 660px;
    height: 100%;
}

.nav-menu ul li {
    height: 100%;
}

.nav-menu ul li a {
    display: flex;
    align-items: center;
    font-size: 24px;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    color: #0b092e;
    height: 100%;
    transition: all 0.2s ease-in-out;
}

.highlight {
    border-bottom: 6px solid #50BFE6;
}

.left {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100vw;
    height: 130vh;
    background-image: url(../icons/left.svg);
    background-position: left bottom;
    background-size: contain;
    background-repeat: no-repeat;
}

.right {
    position: absolute;
    top: 0;
    right: 0;
    width: 60vw;
    height: 130vh;
    background-image: url(../icons/right.svg);
    background-position: right top;
    background-size: contain;
    background-repeat: no-repeat;

}

header {
    position: relative; 
    height: 100vh;
}

.header-text {
    position: absolute;
    top: 30%;
    left: 25%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 200px;

}

.header-text h1 {
    font-size: 87px;
    color: #dee3a8;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;

}

.header-text p {
    font-size: 40px;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    color: #dee3a8;
}

.header-text a {
    text-align: center;
    font-size: 30px;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    background-color: #66FCF1;
    color: #0b092e;
    width: 166px;
    height: 46px;
}

.social-links {
    position: fixed;
    bottom: 0;
    right: 5%;
    height: 200px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 0;
    z-index: 500;
}

.social-links .line {
    width: 2px;
    height: 20px;
    background-color: white;
}

.social-links img {
    height: 40px;
    width: 40px;
    background: white;
    padding: 0.1rem;
    border-radius: 25%;
}

.article {
    padding-left: 2rem;
    padding-right: 2rem;
    width: 90%;
}


.my_skills {
    position: relative;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    flex-wrap: wrap;
    flex-direction: row;
}


.top {
    position: relative;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;   
}

 hr {
    position: relative;
    width: 135px;
    height: 4px;
    border: none;
    background: #50BFE6;
    justify-self: center;
}


.skill {
    position: relative;
    width: 300px;
    padding: 20px;
    margin: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    flex-direction: column;
    text-align: center;
}

.skill img {
    position: relative;
    width: 7rem;
    height: 7rem;
    padding: 7px;
    background: white;
    border-radius: 25%;
    
}

.skill h2 {
    font-size: 1.5rem;
    margin: 10px;
    text-transform: uppercase;
}


@media screen and (max-width: 768px) {
    nav {
        position: relative;
    }

    .nav-menu {
        top: -100%;
        left: 50%;
        transform: translateX(-50%);
        height: 60%;
        width: 90%;
        transition: all 0.4s ease-in-out;
        z-index: 200;
    }

    .nav-menu .active {
        top: 10%;
    }

    .nav-menu ul {
        height: 70%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-between;
    }

    .toggle {
        position: fixed;
        top: 5%;
        right: 5%;
        z-index: 19;
    }

    .toggle span {
        display: block;
        height: 3px;
        width: 28px;
        background-color: white;
    }

    .toggle span:not(:last-child) {
        margin-bottom: 5px;
    }

    .header-text {
        position: absolute;
        top: 25%;
        left: 12%;
    }

    .header-text h1 {
        font-size: 78px;
        color: #dee3a8;
    }

    .header-text p {
        font-size: 36px;
        font-family: "Gabriola";
        color: #dee3a8;
    }

    .footer h2 {
        font-size: 1rem;
    }
}

@media screen and (max-width: 600px) {
    .social-links {
        position: absolute;
        top: 0;
        left: 7%;
        display: flex;
        flex-direction: column-reverse;
    }

    .header-text h1 {
        font-size: 60px;
    }

    .header-text { 
        font-size: 26px;
    }
    
}

@media screen and (max-width: 1120px) {

    .article {
        padding-left: 2rem;
        padding-right: 2rem;
    }

    .left {
        position: absolute;
        bottom: 0%;
        left: 0;
        width: 100vw;
        height: 100vh;
        background-image: url(../icons/leftMobile.svg);
        background-position: left bottom;
        background-size: contain;
        background-repeat: no-repeat;
    }

    .right {
        position: absolute;
        bottom: 0%;
        right: 0;
        width: 100vw;
        height: 100vh;
        background-image: url(../icons/rightMobile.svg);
        background-position: right top;
        background-size: contain;
        background-repeat: no-repeat;
    }
}

@media screen and (max-width: 414px) {
    .header-text {
        top: 30%;
        left: 8%;
        height: 140px;
    }

    .header-text h1 {
        font-size: 48px;
    }

    .header-text p {
        font-size: 22px;
    }

    .header-text a {
        height: 30%;
        width: 120px;
        font-size: 20px;
    }
}

@media screen and (max-width: 375px) {
    .header-text {
        height: 155px;
    }

    .header-text h1 {
        font-size: 41px;
    }

    .header-text p {
        font-size: 18px;
    }
}

.section-title {
    padding-top: 50px;
    width: 100%;
    text-align: center;
    font-size: 3rem;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    color: #dee3a8;
}

.article {
    max-width: 1050px;
    margin: 70px auto;
    color: #dee3a8;
}

.feature-project h3 {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 1.5rem;
}

.feature-project h3::after {
    content: "";
    display: inline-block;
    height: 3px;
    width: 80%;
    background-color: #dee3a8;
}

.odd .project-info {
    display: flex;
    flex-direction: row-reverse;
    padding-top: 70px;
}

.even .project-info {
    display: flex;
    padding-top: 70px;
}

.project-info .project-text {
    background-color: #0b092e;
    height: 100%;
    padding: 20px;
}

.even .project-info .project-text {
    text-align: left;
}



.project-header {
    display: flex;
    justify-content: space-between;
}

.project-header h4 {
    padding-bottom: 40px;
    font-size: 2rem;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.project-header a img {
    height: 40px;
    width: 40px;
    background: white;
    padding: 0.1rem;
    border-radius: 25%;
}

.project-text p {
    font-size: 1.7rem;
    font-family: "Gabriola";
    line-height: 25px;
}

.project-info img {
    height: 275px;
    opacity: 0.4;
}

@media  screen and (max-width: 768px) {
    .article {
        max-width: 90vw;
    }

    .odd .project-info,
    .even .project-info {
        display: flex;
        flex-direction: column;
        padding-top: 70px;
    }



    .project-info img {
        height: auto;
    }

    .project-text p {
        font-size: 1.2rem;
        font-family: "Gabriola";
        line-height: 25px;
    }
}

.about_me {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.about_me p {
    font-size: 1.7rem;
}

/* .about_me ul {
    padding-top: 50px;
    width: 50%;
    display: flex;
    justify-content: space-between;
    color: #66FCF1;
    font-size: 1.7rem;
    text-decoration: overline;
} */

@media  screen and (max-width: 768px) {
    .about_me p {
        font-size: 1.2rem;
    }

    /* .about_me ul {
        width: 100%;
        font-size: 1.2rem;
    } */
}

.contact_me {
    width: 100vw;
}

.send-message {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.send-message input, 
.send-message label,
.send-message textarea {
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 1.5rem;
}

.send-message input, 
.send-message textarea {
    height: 40px;
    border-radius: none;
    width: 70%;
}

.send-message label,
.send-message textarea {
    display: block;
}

.send-message textarea {
    height: 200px;
}

.send-message .submit {
    margin: 10px 0;
    background-color: #66FCF1;
    border: none;
    color: #0b092e;
    cursor: pointer;
}

label {
    margin-top: 1rem;
    margin-bottom: 0.2rem;
}

input {
}

@media screen and (max-width: 768px) {
    .send-message input, 
    .send-message label,
    .send-message textarea {
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 1rem;
    }

    .send-message input,
    .send-message textarea {
        height: 40px;
        border-radius: none;
        width: 90%;
    }

    .send-message textarea {
        height: 150px;
    }
}

footer {
    height: 70px;
    background-color: #03021a;
    display: flex; 
    justify-content: left;
    align-items: center;
}

footer h2 {
    padding: 10px;
    text-align: center;
    font-size: 1.7rem;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    color: #dee3a8;
    padding-left: 2rem;
}

.projects {
    padding-top: 3rem;
}

#about-me,
#skills{
    padding-top: 3rem;
}

textarea {
    resize: none;
}

